--- a/styles/contact.css
+++ b/styles/contact.css
@@ -34,6 +34,19 @@ h2{
     }
 }
 
+.description_box_contact{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+    padding: 30px;
+    border-radius: 20px;
+    
+    transition: all 0.3s ease;
+    color :#100f0f;
+}
 fieldset {
     border-radius: 10px;
     margin-bottom: 16px;
@@ -79,7 +92,7 @@ textarea {
 
 
 .submit {
-    background-color: #0b1852;
+    background-color: rgb(55, 55, 239);
     border: 1px solid #7681b3;
     border-radius: 10px;
     color: #d9f0ff;
@@ -89,7 +102,7 @@ textarea {
 
 .submit:hover {
     background-color: #d9f0ff;
-    color: #7681b3;
+    color: #64689c;
 }
 
 
@@ -98,7 +111,7 @@ textarea {
     width: 100%;
     height: auto;
     border-radius: 15px;
-    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);
+    
     object-fit: contain;
     max-height: 80vh;
 }
@@ -115,9 +128,9 @@ textarea {
     justify-content: center;
     align-items: center;
    
-    border-radius: 20px;
+    
     padding: 20px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+   
     min-height: 400px;
 }
 
