--- a/styles/style.css
+++ b/styles/style.css
@@ -57,7 +57,7 @@ header .subtitle{
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: white;
     backdrop-filter: blur(10px);
     border-radius: 1px;
     padding: 10px 60px;
@@ -162,6 +162,7 @@ main {
     align-items: center;
     background-color: rgb(243, 243, 247);
     padding: 30px;
+    gap: 20px;
     border-radius: 20px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
     transition: all 0.3s ease;
@@ -177,7 +178,7 @@ main {
     width: 100%;
     border-radius: 15px;
     padding: 20px;
-    
+    gap:20px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
     border: 1px solid rgba(255, 255, 255, 0.2);
     transition: all 0.3s ease;
